# tkwant

./: .gitattributes  .gitignore  AUTHORS.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
doc/: Makefile
doc/material/: adaptive_solver.ai
doc/tutorial_source/: chem_vs_elec_bias.rst  green_functions.rst  open_system.rst  self_consistent.rst
skills/tkwant-advanced-topics/: SKILL.md
skills/tkwant-advanced-topics/references/: doc_map.md  source_map.md
skills/tkwant-api-and-scripting/: SKILL.md
skills/tkwant-api-and-scripting/references/: doc_map.md  source_map.md
skills/tkwant-build-and-install/: SKILL.md
skills/tkwant-build-and-install/references/: doc_map.md  source_map.md
skills/tkwant-examples-and-tutorials/: SKILL.md
skills/tkwant-examples-and-tutorials/references/: doc_map.md  source_map.md
skills/tkwant-getting-started/: SKILL.md
skills/tkwant-getting-started/references/: doc_map.md  source_map.md
skills/tkwant-index/: SKILL.md
skills/tkwant-inputs-and-modeling/: SKILL.md
skills/tkwant-inputs-and-modeling/references/: doc_map.md  source_map.md
skills/tkwant-pitfalls/: SKILL.md
skills/tkwant-pitfalls/references/: doc_map.md  source_map.md
skills/tkwant-pre/: SKILL.md
skills/tkwant-pre/references/: doc_map.md  source_map.md
skills/tkwant-reference/: SKILL.md
skills/tkwant-reference/references/: doc_map.md  source_map.md
skills/tkwant-simulation-workflows/: SKILL.md
skills/tkwant-simulation-workflows/references/: doc_map.md  numerical_runbook.md  source_entrypoints.md  source_map.md
skills/tkwant-theory-and-methods/: SKILL.md
tkwant/: __init__.py  _common.py  _version.py  greenfunctions.py  leads.py
tkwant/onebody/: kernels.pyx  onebody.py
(+5 files in other folders)
