[build-system]
requires = ["setuptools>=61", "cython", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "tkwant"
authors = [{name = "tkwant authors", email = "tkwant-authors@kwant-project.org"}]
description = "Package for time-dependent quantum transport simulations"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "BSD-2-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]

dependencies = [
    "cython>=0.22,<1.0",
    "numpy>=1.8.2",
    "scipy>=0.14.0",
    "sympy",
    "kwant>=1.3,<2.0",
    "mpi4py>=2.0",
    "tinyarray",
    "kwantspectrum",
    "versioneer",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
doc = ["sphinx", "jupyter-sphinx", "matplotlib"]
setup = ["cython>=0.22,<1.0", "pytest-runner"]

[project.urls]
homepage = "https://tkwant.kwant-project.org"
documentation = "https://tkwant.kwant-project.org/doc/stable"
repository = "https://gitlab.kwant-project.org/kwant/tkwant.git"

[tool.setuptools]
platforms = ['Unix', 'Linux', 'Mac OS-X', 'Windows']
py-modules = ["_custom_build"]
packages = ["tkwant"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "tkwant/_version.py"
versionfile_build = "tkwant/_version.py"
tag_prefix = "v"
parentdir_prefix = "tkwant"
